Update ClueRepository, TODO tests