@@ -14,9 +14,11 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import pedribault.game.repository.MissionOptionRepository;
 import pedribault.game.repository.MissionRepository;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -35,17 +37,15 @@ public class ClueService {
 
     public List<ClueDto> getClues() {
         final List<Clue> clues = clueRepository.findAll();
-        final List<ClueDto> clueDtos = new ArrayList<>();
-        if (!clues.isEmpty()) {
-            clueDtos.addAll(clues.stream().map(p -> clueMapper.clueToClueDto(p)).toList());
-        }
-        return clueDtos;
+        return clues.stream()
+                .map(clueMapper::clueToClueDto)
+                .collect(Collectors.toList());
     }
 
     public ClueDto getClueById(Integer id) {
         if (id == null) {
             throw new TheGameException(HttpStatus.BAD_REQUEST, 
-                "[getClueById] Id is null", 
+                "[getClueById] Missing id", 
                 "[getClueById] clue_id must be provided");
         }
 
@@ -54,6 +54,42 @@ public class ClueService {
                     "[getClueById] Clue not found", 
                     "[getClueById] clue_id: " + id + " doesn't exist"));
         return clueMapper.clueToClueDto(clue);
+    }
+
+    public List<ClueDto> getCluesByMission(Integer missionId) {
+        if (missionId == null) {
+            throw new TheGameException(HttpStatus.BAD_REQUEST,
+                "[getCluesByMission] Missing mission id",
+                "[getCluesByMission] mission_id must be provided");
+        }
+
+        Mission mission = missionRepository.findById(missionId)
+                .orElseThrow(() -> new TheGameException(HttpStatus.NOT_FOUND,
+                    "[getCluesByMission] Mission not found",
+                    "[getCluesByMission] mission_id: " + missionId + " doesn't exist"));
+
+        return clueRepository.findByMissionOrderByOrderAscSubOrderAsc(mission)
+                .stream()
+                .map(clueMapper::clueToClueDto)
+                .collect(Collectors.toList());
+    }
+
+    public List<ClueDto> getCluesByMissionAndOrder(Integer missionId, Integer order) {
+        if (missionId == null || order == null) {
+            throw new TheGameException(HttpStatus.BAD_REQUEST,
+                "[getCluesByMissionAndOrder] Missing parameters",
+                "[getCluesByMissionAndOrder] mission_id and order must be provided");
+        }
+
+        Mission mission = missionRepository.findById(missionId)
+                .orElseThrow(() -> new TheGameException(HttpStatus.NOT_FOUND,
+                    "[getCluesByMissionAndOrder] Mission not found",
+                    "[getCluesByMissionAndOrder] mission_id: " + missionId + " doesn't exist"));
+
+        return clueRepository.findByMissionAndOrderOrderBySubOrderAsc(mission, order)
+                .stream()
+                .map(clueMapper::clueToClueDto)
+                .collect(Collectors.toList());
     }
 
     public ClueDto createClue(final CreateOrUpdateClue createOrUpdateClue) {
@@ -100,6 +136,19 @@ public class ClueService {
         return clueMapper.clueToClueDto(clue);
     }
 
+    @Transactional
+    public List<ClueDto> createClues(List<CreateOrUpdateClue> createOrUpdateClues) {
+        if (createOrUpdateClues == null || createOrUpdateClues.isEmpty()) {
+            throw new TheGameException(HttpStatus.BAD_REQUEST,
+                "[createClues] Missing payload",
+                "[createClues] List of CreateOrUpdateClue must be provided and non-empty");
+        }
+
+        return createOrUpdateClues.stream()
+                .map(this::createClue)
+                .collect(Collectors.toList());
+    }
+
     public ClueDto updateClue(Integer id, CreateOrUpdateClue createOrUpdateClue) {
         if (createOrUpdateClue == null) {
             throw new TheGameException(HttpStatus.BAD_REQUEST, 
@@ -111,12 +160,10 @@ public class ClueService {
                 "[updateClue] clue_id must be provided");
         }
 
-        log.info("[updateClue] RETRIEVING CLUE ID = " + id);
         Clue existingClue = clueRepository.findById(id)
                 .orElseThrow(() -> new TheGameException(HttpStatus.NOT_FOUND, 
                     "[updateClue] Clue not found", 
                     "[updateClue] clue_id: " + id + " doesn't exist"));
-        log.info("[updateClue] CLUE RETRIEVED");
 
         if (createOrUpdateClue.getOrder() != null) {
             existingClue.setOrder(createOrUpdateClue.getOrder());
@@ -151,4 +198,35 @@ public class ClueService {
         return clueMapper.clueToClueDto(existingClue);
     }
 
+    @Transactional
+    public void deleteClue(Integer id) {
+        if (id == null) {
+            throw new TheGameException(HttpStatus.BAD_REQUEST,
+                "[deleteClue] Missing id",
+                "[deleteClue] clue_id must be provided");
+        }
+
+        Clue clue = clueRepository.findById(id)
+                .orElseThrow(() -> new TheGameException(HttpStatus.NOT_FOUND,
+                    "[deleteClue] Clue not found",
+                    "[deleteClue] clue_id: " + id + " doesn't exist"));
+
+        clueRepository.delete(clue);
+    }
+
+    @Transactional
+    public void deleteCluesByMission(Integer missionId) {
+        if (missionId == null) {
+            throw new TheGameException(HttpStatus.BAD_REQUEST,
+                "[deleteCluesByMission] Missing id",
+                "[deleteCluesByMission] mission_id must be provided");
+        }
+
+        Mission mission = missionRepository.findById(missionId)
+                .orElseThrow(() -> new TheGameException(HttpStatus.NOT_FOUND,
+                    "[deleteCluesByMission] Mission not found",
+                    "[deleteCluesByMission] mission_id: " + missionId + " doesn't exist"));
+
+        clueRepository.deleteByMission(mission);
+    }
 }
